--- a/app/src/main/res/layout/activity_cross.xml
+++ b/app/src/main/res/layout/activity_cross.xml
@@ -7,10 +7,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="chehara.crosswalklib.MainActivity">
+    tools:context=".CrossActivity">
 
     <org.xwalk.core.XWalkView
-        android:id="@+id/xwalkWebView"
+        android:id="@+id/webView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@color/colorAccent"
